Mise en place de l'architecture logicielle (Architecture Hexagonale)

--- a/GestionPlacesParking/appsettings.json
+++ b/GestionPlacesParking/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ParkingContext": "Server=.;Database=GestionPlacesParking;Trusted_Connection=True;"
+  }
 }
