--- a/GestionPlacesParking.Core.Interfaces/GestionPlacesParking.Core.Interfaces.csproj
+++ b/GestionPlacesParking.Core.Interfaces/GestionPlacesParking.Core.Interfaces.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <Folder Include="Infrastructures\" />
-    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GestionPlacesParking.Core.Models\GestionPlacesParking.Core.Models.csproj" />
   </ItemGroup>
 
 </Project>
