--- a/GestionPlacesParking.Core.Application/GestionPlacesParking.Core.Application.csproj
+++ b/GestionPlacesParking.Core.Application/GestionPlacesParking.Core.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <ProjectReference Include="..\GestionPlacesParking.Core.Interfaces\GestionPlacesParking.Core.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
