--- a/GestionPlacesParking.Core.Infrastructure.Web/GestionPlacesParking.Core.Infrastructure.Web.csproj
+++ b/GestionPlacesParking.Core.Infrastructure.Web/GestionPlacesParking.Core.Infrastructure.Web.csproj
@@ -8,7 +8,16 @@
 
   <ItemGroup>
     <Folder Include="Constraints\" />
-    <Folder Include="Middlewares\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Routing.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GestionPlacesParking.Core.Infrastructure\GestionPlacesParking.Core.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
