Remise de la connection string par défaut

--- a/GestionPlacesParking/appsettings.json
+++ b/GestionPlacesParking/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ParkingContext": "Server=localhost\\SQLEXPRESS;Database=GestionPlacesParking;Trusted_Connection=True;"
+    "ParkingContext": "Server=.;Database=GestionPlacesParking;Trusted_Connection=True;"
   }
 }
