--- a/GestionPlacesParking.Core.Infrastructure/GestionPlacesParking.Core.Infrastructure.csproj
+++ b/GestionPlacesParking.Core.Infrastructure/GestionPlacesParking.Core.Infrastructure.csproj
@@ -14,6 +14,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
