Variable environement pour la connection string Synchronisation des données du tableau des réservations en temps réel Vérification pas de doublon pour une réservation en cours

--- a/GestionPlacesParking/GestionPlacesParking.Web.UI.csproj
+++ b/GestionPlacesParking/GestionPlacesParking.Web.UI.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>fe942ced-896a-4a42-8927-3265a1e4e36d</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
