Mise en place de la connectionString accessible en production ou en développement Ajout d'une nouvelle bibliothèque de classe Global pour y stocker les classes globales à l'application

--- a/GestionPlacesParking.Core.Infrastructure/GestionPlacesParking.Core.Infrastructure.csproj
+++ b/GestionPlacesParking.Core.Infrastructure/GestionPlacesParking.Core.Infrastructure.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GestionPlacesParking.Core.Global\GestionPlacesParking.Core.Global.csproj" />
     <ProjectReference Include="..\GestionPlacesParking.Core.Interfaces\GestionPlacesParking.Core.Interfaces.csproj" />
     <ProjectReference Include="..\GestionPlacesParking.Core.Models\GestionPlacesParking.Core.Models.csproj" />
   </ItemGroup>
