--- a/GestionPlacesParking.Core.Application/GestionPlacesParking.Core.Application.csproj
+++ b/GestionPlacesParking.Core.Application/GestionPlacesParking.Core.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GestionPlacesParking.Core.Global\GestionPlacesParking.Core.Global.csproj" />
     <ProjectReference Include="..\GestionPlacesParking.Core.Interfaces\GestionPlacesParking.Core.Interfaces.csproj" />
   </ItemGroup>
 
