--- a/DevOps/mssql/dockerfile
+++ b/DevOps/mssql/dockerfile
@@ -1,4 +1,5 @@
 FROM mcr.microsoft.com/mssql/server:latest
 RUN mkdir /tmp/project
-COPY DevOps/mssql/createUser.sql /tmp/project
-COPY DevOps/mssql/createDB.sql /tmp/project
+COPY createUser.sql /tmp/project
+COPY createDB.sql /tmp/project
+COPY functionCreate.sh /tmp/project
