--- a/DevOps/mssql/dockerfile
+++ b/DevOps/mssql/dockerfile
@@ -5,6 +5,6 @@ RUN mkdir -p /usr/config
 WORKDIR /usr/config
 
 # Bundle config source
-COPY --chown=mssql:mssql DevOps/mssql/config/ /usr/config
+COPY DevOps/mssql/config/ /usr/config
 
 ENTRYPOINT ["./entrypoint.sh"]
