--- a/DevOps/mssql/dockerfile
+++ b/DevOps/mssql/dockerfile
@@ -1,14 +1,11 @@
 FROM mcr.microsoft.com/mssql/server:latest
 
 # Create a config directory
+RUN groupadd -r mssql && adduser -r -g mssql mssql
 RUN mkdir -p /usr/config
 WORKDIR /usr/config
 
 # Bundle config source
-COPY DevOps/mssql/config/ /usr/config
-
-# Grant permissions for to our scripts to be executable
-RUN chmod +x /usr/config/entrypoint.sh
-RUN chmod +x /usr/config/configure-db.sh
+COPY --chown=mssql:mssql DevOps/mssql/config/ /usr/config
 
 ENTRYPOINT ["./entrypoint.sh"]
