--- a/DevOps/mssql/dockerfile
+++ b/DevOps/mssql/dockerfile
@@ -1,12 +1,12 @@
 FROM mcr.microsoft.com/mssql/server:latest
 
 # Create a config directory
-USER root
-RUN groupadd -r mssql && adduser -r -g mssql mssql
+#USER root
+#RUN groupadd -r mssql && adduser -r -g mssql mssql
 RUN mkdir -p /usr/config
 WORKDIR /usr/config
 
 # Bundle config source
-COPY --chown=mssql:mssql DevOps/mssql/config/ /usr/config
+COPY --chown=mssql DevOps/mssql/config/ /usr/config
 
 ENTRYPOINT ["./entrypoint.sh"]
