--- a/DevOps/mssql/dockerfile
+++ b/DevOps/mssql/dockerfile
@@ -1,10 +1,14 @@
-FROM mcr.microsoft.com/mssql/server:latest
+FROM mcr.microsoft.com/mssql/server:2017-latest
 
-#Creattion dossier execution
+# Create a config directory
 RUN mkdir -p /usr/config
 WORKDIR /usr/config
 
-# Copie + permission script BDD APP
-COPY --chown=mssql:mssql DevOps/mssql/config/ /usr/config
+# Bundle config source
+COPY DevOps/mssql/config/ /usr/config
+
+# Grant permissions for to our scripts to be executable
+RUN chmod +x /usr/config/entrypoint.sh
+RUN chmod +x /usr/config/configure-db.sh
 
 ENTRYPOINT ["./entrypoint.sh"]
