--- a/GestionPlacesParking/GestionPlacesParking.Web.UI.csproj
+++ b/GestionPlacesParking/GestionPlacesParking.Web.UI.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNet.Security.OpenIdConnect.Extensions" Version="2.0.0" />
+    <PackageReference Include="AspNet.Security.OpenIdConnect.Primitives" Version="2.0.0" />
+    <PackageReference Include="AspNet.Security.OpenIdConnect.Server" Version="2.0.0" />
+    <PackageReference Include="Keycloak.AuthServices.Authentication" Version="1.2.1" />
+    <PackageReference Include="Keycloak.AuthServices.Authorization" Version="1.2.1" />
+    <PackageReference Include="Keycloak.Net" Version="1.0.18" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
   </ItemGroup>
@@ -17,6 +23,7 @@
     <ProjectReference Include="..\GestionPlacesParking.Core.Infrastructure.Web\GestionPlacesParking.Core.Infrastructure.Web.csproj" />
     <ProjectReference Include="..\GestionPlacesParking.Core.Infrastructure\GestionPlacesParking.Core.Infrastructure.csproj" />
     <ProjectReference Include="..\GestionPlacesParking.Core.Interfaces\GestionPlacesParking.Core.Interfaces.csproj" />
+    <ProjectReference Include="..\Keycloak.Core.SSO\Keycloak.Core.SSO.csproj" />
   </ItemGroup>
 
 </Project>
