--- a/Keycloak.Core.SSO/Keycloak.Core.SSO.csproj
+++ b/Keycloak.Core.SSO/Keycloak.Core.SSO.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GestionPlacesParking.Core.Global\GestionPlacesParking.Core.Global.csproj" />
+  </ItemGroup>
+
 </Project>
