--- a/DevOps/mssql/dockerfile
+++ b/DevOps/mssql/dockerfile
@@ -5,7 +5,7 @@ RUN mkdir -p /usr/config
 WORKDIR /usr/config
 
 # Bundle config source
-COPY DevOps/mssql/config/ /usr/config
+COPY config/ /usr/config
 
 # Grant permissions for to our scripts to be executable
 RUN chmod +x /usr/config/entrypoint.sh
