--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,31 +3,36 @@ services:
     image: mcr.microsoft.com/dotnet/aspnet:6.0
     container_name: parcindusapp
     ports:
-      - 8080:80
+      - 80:80
     networks:
       - parcindus
     volumes:
       - app:/app
+    command: ["dotnet", "/app/publish/GestionPlacesParking.Web.UI.dll"]
     depends_on:
       - "builder"
   builder:
     image: crosoftdotnetbuild
     container_name: parcindusapp
+    volumes:
+      - app:/app
     networks:
       - parcindus
     depends_on:
-      - "BDD"
-  BDD:
-    image: mssqlparcindus
+      - "bdd"
+  bdd:
+    image: mssqlcusto
     ports:
     - 1433:1433
-    volumes:
-    - bdd:/usr/bdd
-    command: command
-
+    environment:
+    - ACCEPT_EULA=Y
+    - SA_PASSWORD=!@pside2022!
+    - MSSQL_PID=Express
+    networks:
+      - parcindus
 networks:
   parcindus:
+    external: true
 volumes:
   app: 
-  src:
-  bdd:     
+    external: true     
