Modif séq fin de ligne sur +sieurs fichiers

--- a/DevOps/mssql/dockerfile
+++ b/DevOps/mssql/dockerfile
@@ -1,11 +1,14 @@
 FROM mcr.microsoft.com/mssql/server:2017-latest
+ENV ACCEPT_EULA=Y
+ENV SA_PASSWORD=!@pside2022!
+ENV MSSQL_PID=Express
 
 # Create a config directory
 RUN mkdir -p /usr/config
 WORKDIR /usr/config
 
 # Bundle config source
-COPY config/ /usr/config
+COPY ./config/ /usr/config
 
 # Grant permissions for to our scripts to be executable
 RUN chmod +x /usr/config/entrypoint.sh
