modif dockerfile & compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,15 @@
 services:
-  app:
-    image: mcr.microsoft.com/dotnet/aspnet:6.0
-    container_name: parcindusapp
-    ports:
-      - 80:80
-    networks:
-      - parcindus
-    volumes:
-      - app:/app
-    command: ["dotnet", "/app/publish/GestionPlacesParking.Web.UI.dll"]
-    depends_on:
-      - builder
+  # bdd:
+  #   container_name: mssql1 
+  #   image: mssqlcusto:latest
+  #   ports:
+  #   - 1433:1433
+  #   environment:
+  #   - ACCEPT_EULA=Y
+  #   - SA_PASSWORD=!@pside2022!
+  #   - MSSQL_PID=Express
+  #   networks:
+  #     - parcindus
   builder:
     image: buildparcindus:latest
     container_name: parcindusbuilder
@@ -18,19 +17,23 @@ services:
       - app:/app
     networks:
       - parcindus
-    depends_on:
-      - bdd
-  bdd:
-    container_name: mssql1 
-    image: mssqlcusto:latest
-    ports:
-    - 1433:1433
+    # depends_on:
+    # - bdd  
+  app:
+    image: mcr.microsoft.com/dotnet/aspnet:6.0
     environment:
-    - ACCEPT_EULA=Y
-    - SA_PASSWORD=!@pside2022!
-    - MSSQL_PID=Express
+      - ParkingContextConnectionString=Server=mssql1;Database=parcIndus;User Id=parcadmin;Password=!@pside2022!;
+    container_name: parcindusapp
+    ports:
+      - 80:80
     networks:
       - parcindus
+    volumes:
+      - app:/app
+    working_dir: /app
+    command: ["dotnet", "GestionPlacesParking.Web.UI.dll"]
+    depends_on:
+      - builder
 networks:
   parcindus:
     external: true
