--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     image: mcr.microsoft.com/dotnet/aspnet:6.0
     environment:
       - ParkingContextConnectionString=Server=mssql1;Database=parcIndus;User Id=parcadmin;Password=!@pside2022!;
+      - IsSso=1
+      - WebSiteUri=http:/localhost
     container_name: parcindusapp
     ports:
       - 80:80
