modif compose & dockerfile mssql for jenkins

--- a/DevOps/mssql/dockerfile
+++ b/DevOps/mssql/dockerfile
@@ -8,7 +8,7 @@ RUN mkdir -p /usr/config
 WORKDIR /usr/config
 
 # Bundle config source
-COPY ./config/ /usr/config
+COPY DevOps/mssql/config/ /usr/config
 
 # Grant permissions for to our scripts to be executable
 RUN chmod +x /usr/config/entrypoint.sh
