modif docker & compose for jenkins

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
 services:
   builder:
-    image: buildparcindus:latest
-    ##harbor.indus.aix.apsdigit.lan/parcindus/dotnetbuildparcindus:${VERSION}
+    image: harbor.indus.aix.apsdigit.lan/parcindus/dotnetbuildparcindus:${VERSION}
     container_name: parcindusbuilder
     volumes:
-      - app:/app
-      ##- appparcindus:/app
+      - appparcindus:/app
     networks:
       - parcindus
   app:
@@ -16,13 +14,11 @@ services:
       - WebsiteUri=http://localhost
     container_name: parcindusapp
     ports:
-    - 80:80
-      #- 8086:80
+      - 8086:80
     networks:
       - parcindus
     volumes:
-      - app:/app
-##- appparcindus:/app
+      - appparcindus:/app
     working_dir: /app
     command: ["dotnet", "GestionPlacesParking.Web.UI.dll"]
     depends_on:
@@ -31,7 +27,7 @@ networks:
   parcindus:
     external: true
 volumes:
-  app:
+  appparcindus: 
     external: true    
-##  appparcindus: 
+  
  
