--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent none
 	parameters {
-	    choice(name: 'VERSION', choices: ['master', 'develop'], description: 'Choix de la version')
+	    choice(name: 'VERSION', choices: ['master', 'develop','devops'], description: 'Choix de la version')
 	}
     stages {
             stage('Git'){
