--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
   app:
     image: mcr.microsoft.com/dotnet/aspnet:6.0
     environment:
-      - ParkingContextConnectionString=Server=mssql1;Database=parcIndus;User Id=parcadmin;Password=!@pside2022!;
+      - parkingContextConnectionString=Server=mssql1;Database=parcIndus;User Id=parcadmin;Password=!@pside2022!;
       - IsSso=1
-      - WebsiteUri=http://Parking.indus.aix.apsdigit.lan
+      - WebsiteUri=http://parking.indus.aix.apsdigit.lan
     container_name: parcindusapp
     networks:
       - parcindus
@@ -20,12 +20,12 @@ services:
     working_dir: /app
     command: ["dotnet", "GestionPlacesParking.Web.UI.dll"]
     labels:
-      - "traefik.http.services.Parking.LoadBalancer.server.port=443"
-      - "traefik.http.routers.Parking.rule=Host(`prevol-dev-front.deploy.indus.aix.apsdigit.lan`)"
-      - "traefik.http.routers.Parking.entrypoints=http,https"
-      - "traefik.http.routers.Parking.service=Parking"
-      - "traefik.http.routers.Parking.tls=true"
-      - "traefik.http.services.Parking.loadbalancer.server.scheme=https"
+      - "traefik.http.services.parking.LoadBalancer.server.port=443"
+      - "traefik.http.routers.parking.rule=Host(`prevol-dev-front.deploy.indus.aix.apsdigit.lan`)"
+      - "traefik.http.routers.parking.entrypoints=http,https"
+      - "traefik.http.routers.parking.service=parking"
+      - "traefik.http.routers.parking.tls=true"
+      - "traefik.http.services.parking.loadbalancer.server.scheme=https"
     depends_on:
       - builder
 networks:
