update compose ports app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,9 @@ services:
       - "traefik.http.routers.parking.service=parking"
       - "traefik.http.routers.parking.tls=true"
       - "traefik.http.services.parking.loadbalancer.server.scheme=https"
+    expose:
+      - 80
+      - 443
     depends_on:
       - builder
 networks:
