--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
     working_dir: /app
     command: ["dotnet", "GestionPlacesParking.Web.UI.dll"]
     labels:
-      - "traefik.http.services.parking.LoadBalancer.server.port=443"
-      - "traefik.http.routers.parking.rule=Host(`prevol-dev-front.deploy.indus.aix.apsdigit.lan`)"
+      - "traefik.http.services.parking.LoadBalancer.server.port=80"
+      - "traefik.http.routers.parking.rule=Host(`parking.indus.aix.apsdigit.lan`)"
       - "traefik.http.routers.parking.entrypoints=http,https"
       - "traefik.http.routers.parking.service=parking"
       - "traefik.http.routers.parking.tls=true"
