--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,13 +19,13 @@ services:
       - appparcindus:/app
     working_dir: /app
     command: ["dotnet", "GestionPlacesParking.Web.UI.dll"]
-    labels:
-      - "traefik.http.services.parking.LoadBalancer.server.port=80"
-      - "traefik.http.routers.parking.rule=Host(`parking.indus.aix.apsdigit.lan`)"
-      - "traefik.http.routers.parking.entrypoints=http,https"
-      - "traefik.http.routers.parking.service=parking"
-      - "traefik.http.routers.parking.tls=true"
-      - "traefik.http.services.parking.loadbalancer.server.scheme=https"
+    # labels:
+    #   - "traefik.http.services.parking.LoadBalancer.server.port=80"
+    #   - "traefik.http.routers.parking.rule=Host(`parking.indus.aix.apsdigit.lan`)"
+    #   - "traefik.http.routers.parking.entrypoints=http,https"
+    #   - "traefik.http.routers.parking.service=parking"
+    #   - "traefik.http.routers.parking.tls=true"
+    #   - "traefik.http.services.parking.loadbalancer.server.scheme=https"
     expose:
       - 80
       - 443
