--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,13 +22,12 @@ services:
     labels:
       - "traefik.http.services.parking.LoadBalancer.server.port=80"
       - "traefik.http.routers.parking.rule=Host(`parcindusapp.deploy.indus.aix.apsdigit.lan`)"
-      - "traefik.http.routers.parking.entrypoints=http,https"
+      - "traefik.http.routers.parking.entrypoints=http"
       - "traefik.http.routers.parking.service=parking"
-      - "traefik.http.routers.parking.tls=true"
+      # - "traefik.http.routers.parking.tls=true"
       - "traefik.http.services.parking.loadbalancer.server.scheme=http"
     expose:
       - 80
-      - 443
     depends_on:
       - builder
 networks:
