--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - ParkingContextConnectionString=Server=mssql1;Database=parcIndus;User Id=parcadmin;Password=!@pside2022!;
       - IsSso=1
       - WebsiteUri=https://parcindusapp.deploy.aix.apsdigit.lan
-      - ASPNETCORE_HTTPS_PORT=443
+      # - ASPNETCORE_HTTPS_PORT=443
     container_name: parcindusapp
     networks:
       - parcindus
