--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,7 @@ services:
     environment:
       - ParkingContextConnectionString=Server=mssql1;Database=parcIndus;User Id=parcadmin;Password=!@pside2022!;
       - IsSso=1
-      - WebsiteUri=https://parcindusapp.deploy.indus.aix.apsdigit.lan
-      # - ASPNETCORE_HTTPS_PORT=443
+      - WebsiteUri='https://parking.deploy.indus.aix.apsdigit.lan'
     container_name: parcindusapp
     networks:
       - parcindus
@@ -22,7 +21,7 @@ services:
     command: ["dotnet","GestionPlacesParking.Web.UI.dll"]
     labels:
       - "traefik.http.services.parking.LoadBalancer.server.port=80"
-      - "traefik.http.routers.parking.rule=Host(`parcindusapp.deploy.indus.aix.apsdigit.lan`)"
+      - "traefik.http.routers.parking.rule=Host(`parking.deploy.indus.aix.apsdigit.lan`)"
       - "traefik.http.routers.parking.entrypoints=http,https"
       - "traefik.http.routers.parking.service=parking"  
       - "traefik.http.routers.parking.tls=true"
