edit final URL debug toomany redirect

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,13 @@ services:
       - appparcindus:/app
     networks:
       - parcindus
-  app:
+  parking:
     image: mcr.microsoft.com/dotnet/aspnet:6.0
     environment:
       - ParkingContextConnectionString=Server=mssql1;Database=parcIndus;User Id=parcadmin;Password=!@pside2022!;
       - IsSso=1
-      - WebsiteUri='https://parking.deploy.indus.aix.apsdigit.lan'
-    container_name: parcindusapp
+      - WebsiteUri="https://parking.deploy.indus.aix.apsdigit.lan"
+    container_name: parkingapp
     networks:
       - parcindus
     volumes:
