Moyenne /1 an par user Fiabilisation des données sans passer par le ReservingName Récupération des infos user par le biais de l'API keycloak

--- a/GestionPlacesParking.Core.Application/GestionPlacesParking.Core.Application.csproj
+++ b/GestionPlacesParking.Core.Application/GestionPlacesParking.Core.Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\GestionPlacesParking.Core.Global\GestionPlacesParking.Core.Global.csproj" />
     <ProjectReference Include="..\GestionPlacesParking.Core.Interfaces\GestionPlacesParking.Core.Interfaces.csproj" />
+    <ProjectReference Include="..\Keycloak.Core.SSO\Keycloak.Core.SSO.csproj" />
   </ItemGroup>
 
 </Project>
