--- a/Keycloak.Core.SSO/Keycloak.Core.SSO.csproj
+++ b/Keycloak.Core.SSO/Keycloak.Core.SSO.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Keycloak.Net" Version="1.0.18" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="6.10.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.10.0" />
