--- a/DevOps/mssql/dockerfile
+++ b/DevOps/mssql/dockerfile
@@ -1,4 +1,7 @@
 FROM mcr.microsoft.com/mssql/server:2017-latest
+ENV ACCEPT_EULA=Y
+ENV SA_PASSWORD=!@pside2022!
+ENV MSSQL_PID=Express
 
 # Create a config directory
 RUN mkdir -p /usr/config
