--- a/GestionPlacesParking.Core.Infrastructure/GestionPlacesParking.Core.Infrastructure.csproj
+++ b/GestionPlacesParking.Core.Infrastructure/GestionPlacesParking.Core.Infrastructure.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="DataLayers\SqlServerReservationDataLayer.cs~RF2e084c26.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.1">
       <PrivateAssets>all</PrivateAssets>
