--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
 services:
   builder:
-    image: buildparcindus:latest
-    ##harbor.indus.aix.apsdigit.lan/parcindus/dotnetbuildparcindus:${VERSION}
+    image: buildparcindus:latests
     container_name: parcindusbuilder
     volumes:
       - app:/app
-      ##- appparcindus:/app
     networks:
       - parcindus
   app:
@@ -17,12 +15,10 @@ services:
     container_name: parcindusapp
     ports:
     - 80:80
-      #- 8086:80
     networks:
       - parcindus
     volumes:
       - app:/app
-##- appparcindus:/app
     working_dir: /app
     command: ["dotnet", "GestionPlacesParking.Web.UI.dll"]
     depends_on:
@@ -33,5 +29,4 @@ networks:
 volumes:
   app:
     external: true    
-##  appparcindus: 
- 
+
