Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,13 +12,10 @@ create-image-sql:
     REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
     REGISTRY_URL: harbor.indus.aix.apsdigit.lan
     DOCKER_IMAGE: harbor.indus.aix.apsdigit.lan/parcindus/mssqlparcindus:$CI_COMMIT_REF_NAME
-    CI_DEBUG_SERVICES: "true"
-    CI_DEBUG_TRACES: "true"
   before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
   script:
-    - sh ls 
-    - docker build -t $DOCKER_IMAGE -f DevOps/mssql/dockerfile
+    - docker build -t $DOCKER_IMAGE -f /DevOps/mssql/dockerfile
     - docker push $DOCKER_IMAGE
 
 # create-image-builder:
