--- a/DevOps/dockerfile
+++ b/DevOps/dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/sdk:7.0
+FROM mcr.microsoft.com/dotnet/aspnet:7.0
 ENV ParkingContextConnectionString='Server=mssql1;Database=parcIndus;User Id=parcadmin;Password=!@pside2022!;'
 ENV IsSso=1
 ENV WebsiteUri='https://parking.deploy.indus.aix.apsdigit.lan'
