--- a/DevOps/builder/dockerfile
+++ b/DevOps/builder/dockerfile
@@ -1,6 +1,9 @@
 FROM mcr.microsoft.com/dotnet/sdk:7.0
 COPY . /src/myWebApp
 RUN mkdir /app
+ENV ParkingContextConnectionString='Server=mssql;Database=parcIndus;User Id=parcadmin;Password=!@pside2022!;'
+ENV KeycloakPasswordUser='pyLcVV$tAFRaNv3J'
+ENV WebsiteUri='https://parking.deploy.indus.aix.apsdigit.lan'
 RUN mv /src/myWebApp/GestionPlacesParking/Settings/keycloak.Development.json /src/myWebApp/GestionPlacesParking/Settings/keycloak.Production.json 
 RUN dotnet tool install -g dotnet-ef
 ENV PATH="$PATH:/root/.dotnet/tools"
