Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ deploy-BDD:
     REGISTRY_PASSWORD: $HARBOR_REGISTRY_PASSWORD
     REGISTRY_URL: harbor.indus.aix.apsdigit.lan
     DOCKER_IMAGE_SQL: harbor.indus.aix.apsdigit.lan/parcindus/mssqlparcindus:$CI_COMMIT_REF_NAME
-    DOCKER_CONTAINER_NAME_SQL: mssqlparcindus:$CI_COMMIT_REF_NAME
+    DOCKER_CONTAINER_NAME_SQL: mssqlparcindus_$CI_COMMIT_REF_NAME
     DOCKER_VOLUME: bddparcindus$CI_COMMIT_REF_NAME
     DOCKER_NETWORK: parcindus
     # CI_DEBUG_TRACE: "true"
